# ska-mid-sofware-deployment

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml
charts/vault/: ska007-dish-lmc.yaml
datacentres/mid-aa/carel-se-berg/deployment/: kustomization.yml
datacentres/mid-aa/karel-se-berg/: kustomization.yml
datacentres/mid-aa/ska001/deployment/: kustomization.yml
datacentres/mid-aa/ska063/deployment/: kustomization.yml
datacentres/mid-itf/central-controller/: fluxtrigger.yml  kustomization.yml
datacentres/mid-itf/central-controller/deployment/: kustomization.yml
datacentres/mid-itf/ska100/deployment/: kustomization.yml
datacentres/shared/deployment/central-controller/: helmrelease.yml  kustomization.yml  vault_secrets.yml
datacentres/shared/deployment/data-product-dashboard/: helmrelease.yml  kustomization.yml
datacentres/shared/deployment/dish/: helmrelease.yml
datacentres/shared/deployment/namespace/: kustomization.yml
datacentres/shared/deployment/pvc/: pvc.yml
datacentres/shared/deployment/sdp-namespace/: kustomization.yml  sdp-namespace.yml
docs/src/: README.rst  conf.py  index.rst  purpose.rst
helmrelease/mid-aa/: kubeconfig.yaml  vault-secrets.yaml
helmrelease/mid-aa/integration/: .info
helmrelease/mid-aa/shared/: .info
helmrelease/mid-aa/staging/: .info
helmrelease/mid-aa/telescope-manager/: .info
helmrelease/mid-itf/: helm-repo.yaml  vault-secrets.yaml
helmrelease/mid-itf/ci-commit-ref/: .info
helmrelease/mid-itf/customs/: .info
helmrelease/mid-itf/integration/: .info
helmrelease/mid-itf/staging/: .info
resources/makefiles/: k8s-installs.mk
src/ska_mid_software_deployment/: __init__.py
tests/: __init__.py
tests/unit/: test_version.py
(+97 files in other folders)
