[tool.poetry]
name = "ska-mid-software-deployment"
version = "0.1.0"
description = "AA0.5 Software Deployment repository"
authors = ["ATLAS"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "ska_mid_software_deployment", from = "src"}]

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "^3.9.2"
ska-tango-testing = "^0.5.3"
pytango = "^9.4.2"
yamllint = "^1.32.0"
urllib3 = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pytest-bdd = "^6.1.1"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.15.10"
pylint-junit = "^0.3.2"
pytest-cov = "^4.0.0"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
darglint = "^1.8.1"
mypy = "^0.991"
autodoc = "^0.5.0"
types-pyyaml = "^6.0.12.6"
types-pygments = "^2.14.0.3"
types-colorama = "^0.4.15.7"
types-setuptools = "^67.3.0.1"
ska-ser-xray = "^0.2.5"
pytest = "7.3.1"
pytest-json-report = "^1.5.0"
pytest-asyncio = "^0.21.1"
requests = "^2.31.0"
types-requests = "^2.31.0.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
docutils = ">=0.18,< 0.20"
Sphinx = "^5.3.0"
ska-ser-sphinx-theme = "^0.1.2"
sphinx-copybutton = "*"
sphinx-tabs = "*"
sphinx-autodoc-typehints = "*"
sphinxcontrib-plantuml = "*"
typing_extensions = "*"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "1.3.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.poetry.group.simulator.dependencies]
pytango = "^9.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
